--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <p>my first local repository</p>
     <p>this is a new feature!</p>
+    <p>added another feature!</p>
     
 </body>
 </html>
